# pretzel

./: Cargo.toml  LICENSE.MIT  LICENSE.ZLIB  Makefile.toml  README.md  README.tpl  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
shaders/spirv/: bc1.spv  bc1_dither.spv  bc4.spv  bc6h.spv  dither555.spv  eac.spv  eac_r11.spv  etc1.spv  etc1_with_error.spv  etc2_p.spv  etc2_rgb_selector.spv  etc2_rgba_selector.spv  etc2_rgba_stitch.spv  etc2_th.spv  etc2_th_find_best_c0c1_k_means.spv
shaders/src/: UavCrossPlatform_piece_all.glsl  bc1.glsl  bc4.glsl  bc6h.glsl  dither555.glsl  eac.glsl  etc1.glsl  etc2_p.glsl  etc2_rgb_selector.glsl  etc2_rgba_stitch.glsl  etc2_th.glsl  etc2_th_find_best_c0c1_k_means.glsl
src/: bc1.rs  lib.rs
