[workspace]
members = [
    ".",
    "cli"
]
default-members = [
    ".",
    "cli"
]
resolver = "2"

[package]
name = "pretzel"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "GPU accelerated compressed texture compressor"
readme = "README.md"
repository = "https://github.com/BVE-Reborn/pretzel"
license = "MIT AND BSD-2-Clause AND Zlib AND (MIT OR Apache-2.0 OR Zlib)"
keywords = []
categories = []

[dependencies]
arrayvec = "0.7"
bytemuck = "1"
wgpu = { version = "0.10", features = ["spirv"] }

[package.metadata.release]
pre-release-hook = ["cargo", "readme", "-o", "README.md", "-t", "README.tpl"]
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[Unreleased\\]\\(#unreleased\\)"
replace = "[Unreleased](#unreleased)\n- [v{{version}}](#v{{version}})"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[v([0-9]+)\\.([0-9]+)\\.([0-9]+)\\]\\(#v[0-9\\.]+\\)"
replace = "[v$1.$2.$3](#v$1$2$3)"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## Unreleased"
replace = "## Unreleased\n\n## v{{version}}\n\nReleased {{date}}"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[Unreleased\\]\\(https://github.com/BVE-Reborn/pretzel/compare/v([a-z0-9.-]+)\\.\\.\\.HEAD\\)"
replace = "[Unreleased](https://github.com/BVE-Reborn/pretzel/compare/v{{version}}...HEAD)\n- [v{{version}}](https://github.com/BVE-Reborn/pretzel/compare/v$1...v{{version}})"
min = 0  # allow first increment
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- Begin Diffs -->"
replace = "- [Unreleased](https://github.com/BVE-Reborn/pretzel/compare/v{{version}}...HEAD)"
min = 0  # allow non-first increment

[profile.release]
lto = "thin"

