[package]
name = "pretzel-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pretzel"
path = "src/main.rs"

[dependencies]
image = "0.23"
pretzel = { version = "0.1", path = ".." }
structopt = "0.3"
