[package]
name = "pretzel-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pretzel"
path = "src/main.rs"

[dependencies]
bytemuck = "1"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
image = "0.23"
log = "0.4"
pretzel = { version = "0.1", path = ".." }
pollster = "0.2"
structopt = "0.3"
wgpu = "0.10"
